# AetherNet

./: ACTIVITY.md  CMakeLists.txt  README.md  ai_guardian_report.txt
.github/workflows/: activity.yml
include/: LockFreeQueue.hpp  MulticastReceiver.hpp  TCPClient.hpp  UDPClient.hpp
src/: main.cpp
